[gd_scene load_steps=3 format=3 uid="uid://c8xq4y2j3n5m6"]

[ext_resource type="Script" uid="uid://btpl7m43p5ydx" path="res://ui/hub/inventory_tooltip.gd" id="1_tooltip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tooltip"]
bg_color = Color(0.05, 0.05, 0.05, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.4, 0.9)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 4

[node name="InventoryTooltip" type="Panel"]
modulate = Color(1, 1, 1, 0)
z_index = 100
offset_right = 200.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tooltip")
script = ExtResource("1_tooltip")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 14
text = "Nombre del objeto"
horizontal_alignment = 1
autowrap_mode = 3

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Cantidad: 1"
horizontal_alignment = 1
